Fixed prefer-header not working in batch requests